<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/dashboard_textview_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="30sp"
        android:text="@string/dashboard_textview_switch"
        />

    <TextView
        android:id="@+id/dashboard_textview_switch_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="20sp"
        android:text="@string/dashboard_textview_switch_status_1"
        />

    <TextView
        android:id="@+id/dashboard_textview_switch_status_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="20sp"
        android:text="@string/dashboard_textview_switch_status_2"
        />

    <Spinner
        android:id="@+id/dashboard_spinner_switch_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.8"
        android:spinnerMode="dialog"
        android:textSize="20sp"
        android:entries="@array/statusValues"
        />

    <Spinner
        android:id="@+id/dashboard_spinner_switch_status_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintHorizontal_bias="0.8"
        android:spinnerMode="dialog"
        android:textSize="20sp"
        android:entries="@array/statusValues"
        />


    <TextView
        android:id="@+id/dashboard_textview_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_textview_bar"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <TextView
        android:id="@+id/dashboard_textview_bar_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="20sp"
        android:text="@string/dashboard_textview_switch_status_1"
        />

    <TextView
        android:id="@+id/dashboard_textview_bar_status_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="20sp"
        android:text="@string/dashboard_textview_switch_status_2"
        />

    <Spinner
        android:id="@+id/dashboard_spinner_bar_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:layout_constraintHorizontal_bias="0.8"
        android:spinnerMode="dialog"
        android:textSize="20sp"
        android:entries="@array/statusValues"
        />

    <Spinner
        android:id="@+id/dashboard_spinner_bar_status_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.8"
        android:spinnerMode="dialog"
        android:textSize="20sp"
        android:entries="@array/statusValues"
        />
    <!--
    <Button
        android:id="@+id/dashboard_button_switch_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.9"
        android:textSize="15sp"
        android:text="@string/dashboard_button_update"
        />

    <Button
        android:id="@+id/dashboard_button_switch_status_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintHorizontal_bias="0.9"
        android:textSize="15sp"
        android:text="@string/dashboard_button_update"
        />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>